@@ -2369,23 +2369,25 @@ int	evaluate_macro_function(char *value, const char *host, const char *key, cons
 	DB_ITEM		item;
 	DB_RESULT	result;
 	DB_ROW		row;
-
-	char	host_esc[MAX_STRING_LEN];
-	char	key_esc[MAX_STRING_LEN];
-
-	int	res;
+	char		*host_esc, *key_esc;
+	int		res;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() function:'%s:%s.%s(%s)'",
 			__function_name, host, key, function, parameter);
 
-	DBescape_string(host, host_esc, MAX_STRING_LEN);
-	DBescape_string(key, key_esc, MAX_STRING_LEN);
+	host_esc = DBdyn_escape_string(host);
+	key_esc = DBdyn_escape_string(key);
 
-	result = DBselect("select %s where h.host='%s' and h.hostid=i.hostid and i.key_='%s'" DB_NODE,
-		ZBX_SQL_ITEM_SELECT,
-		host_esc,
-		key_esc,
-		DBnode_local("h.hostid"));
+	result = DBselect(
+			"select %s"
+			" where h.host='%s'"
+				" and h.hostid=i.hostid"
+				" and i.key_='%s'"
+				DB_NODE,
+			ZBX_SQL_ITEM_SELECT, host_esc, key_esc, DBnode_local("h.hostid"));
+
+	zbx_free(host_esc);
+	zbx_free(key_esc);
 
 	if (NULL == (row = DBfetch(result)))
 	{
